<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="common.activity.ride.common.LoginActivity">
<core.RideMeCustomEditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/username"
    android:hint="@string/username"
    android:gravity="center_horizontal" ></core.RideMeCustomEditText>
<core.RideMeCustomEditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/username"
    android:gravity="center_horizontal"
    android:id="@+id/password"
    android:hint="@string/password"></core.RideMeCustomEditText>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button"
    android:layout_below="@+id/password"
    android:id="@+id/login"
    android:text="@string/submit"
    android:layout_marginTop="@dimen/activity_vertical_margin"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@+id/login"
        android:text="@string/signUp"
        android:id="@+id/signUp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
</RelativeLayout>

