<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="common.activity.ride.common.RegistrationActivity">
    <core.RideMeCustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_signup"
        android:id="@+id/usernameSignup"/>
    <core.RideMeCustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameSignup"
        android:id="@+id/passwordSignup"
        android:hint="@string/password_signup"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
    <core.RideMeCustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordConfirmSignup"
        android:layout_below="@+id/passwordSignup"
        android:hint="@string/confirmPasswordSignup"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitRegistration"
        android:layout_below="@+id/passwordConfirmSignup"
        android:text="@string/submit"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>

</RelativeLayout>
