<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="common.activity.ride.offerRide.OfferRideActivity">

    <core.RideMeCustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Starting Point"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:id="@+id/startingPoint"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewStartPoint"
        android:visibility="gone"
        android:layout_below="@+id/startingPoint"/>

    <core.RideMeCustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="End Point"
        android:id="@+id/endPoint"
        android:layout_below="@id/listViewStartPoint"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewEndPoint"
        android:visibility="gone"
        android:layout_below="@+id/endPoint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/dateTimeLayout"
        android:layout_below="@+id/listViewEndPoint"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:id="@+id/date"
            android:layout_weight="0.6"
            android:background="@drawable/button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/time"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.3"
            android:background="@drawable/button"/>

    </LinearLayout>

    <core.RideMeCustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/fair"
        android:hint="Fair"
        android:layout_below="@+id/dateTimeLayout"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitOfferRide"
        android:layout_below="@+id/fair"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"/>

</RelativeLayout>